package Comportamiento.Observer;

public interface IObservador {
    //Observer
    void actualizar(String noticia);
}
